@@ -5,6 +5,7 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import jakarta.persistence.CascadeType;
@@ -26,6 +27,7 @@ import jakarta.persistence.Table;
 import org.GLM.negoriator.negotiation.NegotiationEngine.BuyerProfile;
 import org.GLM.negoriator.negotiation.NegotiationEngine.NegotiationBounds;
 import org.GLM.negoriator.negotiation.NegotiationEngine.NegotiationContext;
+import org.GLM.negoriator.negotiation.NegotiationEngine.NegotiationStrategy;
 import org.GLM.negoriator.negotiation.NegotiationEngine.OfferVector;
 import org.GLM.negoriator.negotiation.NegotiationEngine.SupplierModel;
 
@@ -43,6 +45,10 @@ public class NegotiationSession {
 	@Column(name = "max_rounds", nullable = false)
 	private Integer maxRounds;
 
+	@Enumerated(EnumType.STRING)
+	@Column(name = "strategy", nullable = false, length = 24)
+	private NegotiationStrategy strategy;
+
 	@Column(name = "risk_of_walkaway", nullable = false, precision = 10, scale = 4)
 	private BigDecimal riskOfWalkaway;
 
@@ -59,6 +65,9 @@ public class NegotiationSession {
 	@Embedded
 	private SupplierModelSnapshot supplierModelSnapshot;
 
+	@Embedded
+	private SupplierConstraintsSnapshot supplierConstraintsSnapshot;
+
 	@OneToMany(mappedBy = "session", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
 	@OrderBy("roundNumber ASC, createdAt ASC")
 	private final List<NegotiationOffer> offers = new ArrayList<>();
@@ -66,6 +75,10 @@ public class NegotiationSession {
 	@OneToMany(mappedBy = "session", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
 	@OrderBy("roundNumber ASC, decidedAt ASC")
 	private final List<NegotiationDecision> decisions = new ArrayList<>();
+
+	@OneToMany(mappedBy = "session", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
+	@OrderBy("roundNumber ASC, createdAt ASC")
+	private final List<NegotiationStrategyChange> strategyChanges = new ArrayList<>();
 
 	@Column(name = "created_at", nullable = false)
 	private Instant createdAt;
@@ -79,6 +92,7 @@ public class NegotiationSession {
 	public NegotiationSession(
 		Integer currentRound,
 		Integer maxRounds,
+		NegotiationStrategy strategy,
 		BigDecimal riskOfWalkaway,
 		NegotiationSessionStatus status,
 		BuyerProfileSnapshot buyerProfileSnapshot,
@@ -87,11 +101,13 @@ public class NegotiationSession {
 	) {
 		this.currentRound = currentRound;
 		this.maxRounds = maxRounds;
+		this.strategy = strategy;
 		this.riskOfWalkaway = riskOfWalkaway;
 		this.status = status;
 		this.buyerProfileSnapshot = buyerProfileSnapshot;
 		this.boundsSnapshot = boundsSnapshot;
 		this.supplierModelSnapshot = supplierModelSnapshot;
+		this.supplierConstraintsSnapshot = SupplierConstraintsSnapshot.empty();
 	}
 
 	public void addOffer(NegotiationOffer offer) {
@@ -102,6 +118,11 @@ public class NegotiationSession {
 	public void addDecision(NegotiationDecision decision) {
 		decision.attachTo(this);
 		decisions.add(decision);
+	}
+
+	public void addStrategyChange(NegotiationStrategyChange strategyChange) {
+		strategyChange.attachTo(this);
+		strategyChanges.add(strategyChange);
 	}
 
 	public BuyerProfile toBuyerProfile() {
@@ -116,6 +137,18 @@ public class NegotiationSession {
 		return supplierModelSnapshot.toSupplierModel();
 	}
 
+	public SupplierConstraintsSnapshot supplierConstraints() {
+		return supplierConstraintsSnapshot == null ? SupplierConstraintsSnapshot.empty() : supplierConstraintsSnapshot;
+	}
+
+	public void mergeSupplierConstraints(SupplierConstraintsSnapshot nextConstraints) {
+		if (nextConstraints == null || nextConstraints.isEmpty()) {
+			return;
+		}
+
+		supplierConstraintsSnapshot = supplierConstraints().merge(nextConstraints);
+	}
+
 	public SupplierModel currentSupplierModel() {
 		if (decisions.isEmpty()) {
 			return initialSupplierModel();
@@ -127,20 +160,35 @@ public class NegotiationSession {
 			.orElseThrow();
 
 		return latestDecision.toSupplierModel(
-			supplierModelSnapshot.getUpdateSensitivity(),
 			supplierModelSnapshot.getReservationUtility());
 	}
 
 	public NegotiationContext toNegotiationContext() {
-		List<OfferVector> history = offers.stream()
+		List<OfferVector> history = new ArrayList<>();
+
+		Map<Integer, List<NegotiationOffer>> offersByRound = offers.stream()
 			.sorted(Comparator.comparing(NegotiationOffer::getRoundNumber)
 				.thenComparing(NegotiationOffer::getCreatedAt))
-			.map(NegotiationOffer::toOfferVector)
-			.toList();
+			.collect(java.util.stream.Collectors.groupingBy(
+				NegotiationOffer::getRoundNumber,
+				java.util.LinkedHashMap::new,
+				java.util.stream.Collectors.toList()));
+
+		for (List<NegotiationOffer> roundOffers : offersByRound.values()) {
+			for (NegotiationOffer offer : roundOffers) {
+				if (offer.getParty() == NegotiationParty.SUPPLIER) {
+					history.add(offer.toOfferVector());
+				} else if (offer.getParty() == NegotiationParty.BUYER) {
+					history.add(offer.toOfferVector());
+					break;
+				}
+			}
+		}
 
 		return new NegotiationContext(
 			currentRound,
 			maxRounds,
+			strategy,
 			status.toNegotiationState(),
 			riskOfWalkaway,
 			history);
@@ -151,6 +199,17 @@ public class NegotiationSession {
 		if (nextStatus == NegotiationSessionStatus.COUNTERED) {
 			this.currentRound = currentRound + 1;
 		}
+	}
+
+	public void switchStrategy(
+		NegotiationStrategy nextStrategy,
+		Integer roundNumber,
+		NegotiationStrategyChangeTrigger trigger,
+		String rationale
+	) {
+		NegotiationStrategy previousStrategy = this.strategy;
+		this.strategy = nextStrategy;
+		addStrategyChange(new NegotiationStrategyChange(roundNumber, previousStrategy, nextStrategy, trigger, rationale));
 	}
 
 	public boolean isClosed() {
@@ -183,6 +242,10 @@ public class NegotiationSession {
 		return maxRounds;
 	}
 
+	public NegotiationStrategy getStrategy() {
+		return strategy;
+	}
+
 	public BigDecimal getRiskOfWalkaway() {
 		return riskOfWalkaway;
 	}
@@ -203,12 +266,20 @@ public class NegotiationSession {
 		return supplierModelSnapshot;
 	}
 
+	public SupplierConstraintsSnapshot getSupplierConstraintsSnapshot() {
+		return supplierConstraints();
+	}
+
 	public List<NegotiationOffer> getOffers() {
 		return offers;
 	}
 
 	public List<NegotiationDecision> getDecisions() {
 		return decisions;
+	}
+
+	public List<NegotiationStrategyChange> getStrategyChanges() {
+		return strategyChanges;
 	}
 
 	public Instant getCreatedAt() {
